--- a/3. Web/MyApp/Contacts.html
+++ b/3. Web/MyApp/Contacts.html
@@ -46,6 +46,15 @@
         </div>
     </nav>
 
+    <div class="container-fluid address">
+        <h4>My Address</h4>
+        <hr class="display-4">
+        <p>Equal-width columns can be broken into multiple lines, 
+            but there was a Safari flexbox bug that prevented this from working without 
+            an explicit flex-basis or border. There are workarounds for older browser 
+            versions, but they shouldn’t be necessary if you’re up-to-date.</p>
+    </div>
+
     <footer class="container-fluid">
             <div class="container-fluid">
                 <div class="row padding text-center">
