--- a/3. Web/MyApp/About.html
+++ b/3. Web/MyApp/About.html
@@ -46,21 +46,32 @@
         </div>
     </nav>
 
-    <footer class="container-fluid">
-            <div class="container-fluid">
-                <div class="row padding text-center">
-                    <div class="col-12">
-                        <h2>Our Contacts</h2>
-                    </div>
-                    <div class="col-12 social padding">
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                    </div>
+    <div class="container-fluid">
+        <div>
+
+        </div>
+    </div>
+
+    <div class="text-center">
+        <button type="button" id="gifsBtn" class="btn btn-succes text-center" data-toggle="collapse"
+            data-target="#gifs">Open block</button>
+    </div>
+
+    <footer class="container-fluid" id="footer">
+        <div class="container-fluid">
+            <div class="row padding text-center">
+                <div class="col-12">
+                    <h2>Our Contacts</h2>
+                </div>
+                <div class="col-12 social padding">
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
-        </footer>
-    </body>
-    
-    </html>
+        </div>
+    </footer>
+</body>
+
+</html>
