--- a/3. Web/MyApp/Home.html
+++ b/3. Web/MyApp/Home.html
@@ -17,15 +17,6 @@
         crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script>
-        function scrollDown() {
-            $("html,body").animate({
-                scrollTop: $("#signin").offset().top
-            },
-                1000);
-        };
-
-    </script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -66,32 +57,38 @@
             <div class="carousel-item active">
                 <img src="imgs/foto1.jpg">
                 <div class="carousel-caption">
-                    <h1 class="display-2">Programare</h1>
-                    <h3>Learn to pragrame</h3>
+                    <h1 class="display-2">Internship</h1>
+                    <h3>Learn pragraming</h3>
                     <button type="button" class="btn btn-outline-light btn-lg">Watch</button>
                     <button type="button" class="btn btn-warning btn-lg">Demo</button>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="imgs/foto2.jpg">
+                <div class="carousel-caption">
+                        <h1 class="display-2">Internship</h1>
+                        <h3>Learn pragraming</h3>
+                    </div>
             </div>
             <div class="carousel-item">
                 <img src="imgs/foto3.jpg">
+                <div class="carousel-caption">
+                        <h1 class="display-2">Internship</h1>
+                        <h3>Learn pragraming</h3>
+                    </div>
             </div>
         </div>
     </div>
 
     <!--Log In-->
-    <div class="container paddingFrom">
+    <div class="container paddingForm">
         <div class="row col-12 text-center">
             <div class="row col-12 text-center">
                 <h2>Log In</h2>
             </div>
 
             <div class="row col-12 text-center">
-                <div class="col-sm-8">
-
-
+                <div class="text-center">
                     <h4 class="page-header">Account Data</h4>
                     <form role="form">
                         <div class="form-group float-label-control label-bottom">
@@ -104,59 +101,32 @@
                         </div>
 
                         <div>
-                            <input type="submit" class="btn btn-lg btn-primary" value="Sign In">
-                        </div>
-                        <div>
-                            <br>
-                            <button onclick="scrollDown()" style="color:rgb(165, 165, 165);" class="btn btn-outline-light">Register, if you
-                                don't have account!</button>
+                            <input type="submit" class="btn btn-lg btn-primary" id="signInBtn" value="Sign In">
+                            <button id="signInBtn" style=" padding:5px; color:rgb(165, 165, 165);"
+                                class="btn btn-outline-light">I forgot my password!</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-
     <hr>
-
-    <!--Blocul cu text 1-->
-    <div class="container-fluid">
-        <div class="row jumbotron">
-            <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-                <p class="lead">
-                    Era odata ca niciodata o prea frumoasa fata.
-                    Din mare parte... Limba noastr-i o comoara, in adincuri
-                    infundata, un sirag de piatra rara in adincuri infundata.
-                    Era odata ca niciodata o prea frumoasa fata.
-                    Din mare parte... Limba noastr-i o comoara, in adincuri
-                    infundata, un sirag de piatra rara in adincuri infundata.
-                </p>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-                <a href="#">
-                    <button class="btn btn-succes btn-lg" type="button">Read More</button>
-                </a>
-            </div>
-        </div>
-    </div>
-    <hr class="my-4">
-
     <div class="container-fluid padding">
         <div class="row padding">
             <div class="offset-lg-2 col-lg-4">
                 <h2>Ceva informatie</h2>
-                <p>
-                    lfdsjsd sd fdsdf sdfsdf sdf dsf fsdfsd fsdf sdfsdf sdfsdffsdfsdf
-                    dfsd sdfsd fsdf sdf s fsdf sdf sdf sdf sfsdfds
-                    sdfsdffsdfsdff
+                <p>Madonna and Child with Angels is the central panel of the large multi-paneled 
+                        altarpiece produced by Masaccio for the chapel of Saint Julian in the church 
+                        of Santa Maria del Carmine in Pisa, Italy. The panel, which is badly damaged 
+                        and smaller than its original size, was produced in collaboration with Masaccio's 
                     <br><br>
-                    lfdsjsd sd fdsdf sdfsdf sdf dsf fsdfsd fsdf sdfsdf sdfsdffsdfsdf
-                    dfsd sdfsd fsdf sdf s fsdf sdf sdf sdf sfsdfds
-                    sdfsdffsdfsdff
+                    Madonna and Child with Angels is the central panel of the large multi-paneled 
+                        altarpiece produced by Masaccio for the chapel of Saint Julian in the church 
+                        of Santa Maria del Carmine in Pisa, Italy. The panel, which is badly damaged 
+
                     <br><br>
-                    lfdsjsd sd fdsdf sdfsdf sdf dsf fsdfsd fsdf sdfsdf sdfsdffsdfsdf
-                    dfsd sdfsd fsdf sdf s fsdf sdf sdf sdf sfsdfds
-                    sdfsdffsdfsdff
+                    Madonna and Child with Angels is the central panel of the large multi-paneled 
+
                     <br>
                     <a href="#" class="btn btn-danger">Read More</a>
                 </p>
@@ -167,60 +137,6 @@
             </div>
         </div>
     </div>
-    <hr>
-
-    <!--Sign In-->
-    <div class="container paddingFrom" id="signin">
-        <div class="row col-12 text-center">
-            <div class="row col-12 text-center">
-                <h2>Sign In</h2>
-            </div>
-            <div class="row col-12 text-center">
-                <div class="col-sm-8">
-                    <h4 class="page-header">Personal Data</h4>
-                    <form role="form">
-                        <div class="form-group float-label-control">
-                            <label for="">First Name</label>
-                            <input type="text" class="form-control" placeholder="First Name" name="FName">
-                        </div>
-                        <div class="form-group float-label-control">
-                            <label for="">Last Name</label>
-                            <input type="text" class="form-control" placeholder="Last Name" name="LName">
-                        </div>
-                        <div class="form-group float-label-control">
-                            <label for="">Date Of Birth</label>
-                            <input type="date" class="form-control" placeholder="Date of Birth" name="DBirth">
-                        </div>
-                        <div class="form-group float-label-control">
-                            <label for="">Number Phone</label>
-                            <input type="text" class="form-control" placeholder="Number Phone" name="NumPhone">
-                        </div>
-                        <h4 class="page-header">Account Data</h4>
-                        <div class="form-group float-label-control label-bottom">
-                            <label for="">Login</label>
-                            <input type="text" class="form-control" placeholder="Login" name="Login">
-                        </div>
-                        <div class="form-group float-label-control">
-                            <label for="">Password</label>
-                            <input type="password" class="form-control" placeholder="Password" name="Password">
-                        </div>
-                        <h4 class="page-header">Your E-Mail Address</h4>
-                        <div class="form-group float-label-control">
-                            <label for="">Email Address</label>
-                            <input type="email" class="form-control" placeholder="What's your email address?"
-                                name="EMail">
-                        </div>
-                        <div>
-                            <input type="submit" class="btn btn-lg btn-primary" value="Sign In">
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <hr class="my-4">
-
     <figure>
         <div class="fixed-wrap">
             <div id="fixed">
@@ -228,11 +144,6 @@
             </div>
         </div>
     </figure>
-    <div class="text-center">
-        <button type="button" id="gifsBtn" class="btn btn-succes text-center" data-toggle="collapse"
-            data-target="#gifs">Open
-            block</button>
-    </div>
     <div id="gifs" class="collapse">
         <div class="container-fluid padding">
             <div class="row text-center">
@@ -312,7 +223,7 @@
         </div>
     </div>
 
-    <footer class="container-fluid">
+    <footer class="container-fluid" id="footer">
         <div class="container-fluid">
             <div class="row padding text-center">
                 <div class="col-12">
