Add some web files

--- a/3. Web/MyApp/Contacts.html
+++ b/3. Web/MyApp/Contacts.html
@@ -55,7 +55,7 @@
             versions, but they shouldn’t be necessary if you’re up-to-date.</p>
     </div>
 
-    <footer class="container-fluid">
+    <footer class="container-fluid" id="footer">
             <div class="container-fluid">
                 <div class="row padding text-center">
                     <div class="col-12">
