--- a/3. Web/MyApp/Home.html
+++ b/3. Web/MyApp/Home.html
@@ -16,7 +16,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -91,7 +91,7 @@
             <div class="row col-12 text-center">
                 <div class="text-center">
                     <h4 class="page-header">Account Data</h4>
-                    <form role="form">
+                    <form role="form" action="UserPage.html">
                         <div class="form-group float-label-control label-bottom">
                             <label for="">Login</label>
                             <input type="text" class="form-control" placeholder="Login">
