--- a/3. Web/MyApp/Register.html
+++ b/3. Web/MyApp/Register.html
@@ -16,8 +16,8 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+    <!-- <script>
         function scrollDown() {
             $("html,body").animate({
                 scrollTop: $("#signin").offset().top
@@ -25,7 +25,7 @@
                 1000);
         };
 
-    </script>
+    </script> -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -110,18 +110,18 @@
                 <br>
                 <div>
                     <h2>Ceva informatie</h2>
-                    <p>	Madonna and Child with Angels is the central panel of the large multi-paneled 
-                        altarpiece produced by Masaccio for the chapel of Saint Julian in the church 
-                        of Santa Maria del Carmine in Pisa, Italy. The panel, which is badly damaged 
+                    <p> Madonna and Child with Angels is the central panel of the large multi-paneled
+                        altarpiece produced by Masaccio for the chapel of Saint Julian in the church
+                        of Santa Maria del Carmine in Pisa, Italy. The panel, which is badly damaged
                         <br><br>
-                        Madonna and Child with Angels is the central panel of the large multi-paneled 
-                        altarpiece produced by Masaccio for the chapel of Saint Julian in the church 
-                        of Santa Maria del Carmine in Pisa, Italy. The panel, which is badly damaged 
-                        and smaller than its original size, was produced in collaboration with Masaccio's 
-                        brother Giovanni and with Andrea di Giusto in 1426. It depicts six figures: the 
+                        Madonna and Child with Angels is the central panel of the large multi-paneled
+                        altarpiece produced by Masaccio for the chapel of Saint Julian in the church
+                        of Santa Maria del Carmine in Pisa, Italy. The panel, which is badly damaged
+                        and smaller than its original size, was produced in collaboration with Masaccio's
+                        brother Giovanni and with Andrea di Giusto in 1426. It depicts six figures: the
                         <br><br>
-                        Madonna and Child with Angels is the central panel of the large multi-paneled 
-                        altarpiece produced by Masaccio for the chapel of Saint Julian in the church 
+                        Madonna and Child with Angels is the central panel of the large multi-paneled
+                        altarpiece produced by Masaccio for the chapel of Saint Julian in the church
                         <br>
                         <a href="#" class="btn btn-danger">Read More</a>
                     </p>
@@ -132,25 +132,25 @@
     <hr>
     <!--Blocul cu text 1-->
     <div class="container-fluid">
-            <div class="row jumbotron">
-                <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-                    <p class="lead">
-                        Era odata ca niciodata o prea frumoasa fata.
-                        Din mare parte... Limba noastr-i o comoara, in adincuri
-                        infundata, un sirag de piatra rara in adincuri infundata.
-                        Era odata ca niciodata o prea frumoasa fata.
-                        Din mare parte... Limba noastr-i o comoara, in adincuri
-                        infundata, un sirag de piatra rara in adincuri infundata.
-                    </p>
-                </div>
-                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-                    <a href="#">
-                        <button class="btn btn-succes btn-lg" type="button">Read More</button>
-                    </a>
-                </div>
+        <div class="row jumbotron">
+            <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+                <p class="lead">
+                    Era odata ca niciodata o prea frumoasa fata.
+                    Din mare parte... Limba noastr-i o comoara, in adincuri
+                    infundata, un sirag de piatra rara in adincuri infundata.
+                    Era odata ca niciodata o prea frumoasa fata.
+                    Din mare parte... Limba noastr-i o comoara, in adincuri
+                    infundata, un sirag de piatra rara in adincuri infundata.
+                </p>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+                <a href="#">
+                    <button class="btn btn-succes btn-lg" type="button">Read More</button>
+                </a>
             </div>
         </div>
-        <br>
+    </div>
+    <br>
     <footer class="container-fluid" id="footer">
         <div class="container-fluid">
             <div class="row padding text-center">
