--- a/3. Web/MyApp/About.html
+++ b/3. Web/MyApp/About.html
@@ -18,6 +18,7 @@
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styleAbout.css">
 </head>
 
 <body>
@@ -47,14 +48,99 @@
     </nav>
 
     <div class="container-fluid">
-        <div>
+        <div class="row text-center bg-first">
+        </div>
+        <div class="text-center align-center" style="margin-bottom:50px">
+            <p> <span class="text-danger">Jora –</span>
+                <span class="text-danger">fuji dupa iarba </span><br>
+                <span>de fiecare data</span>
+                <span class="text-success">la dinsu in gradina </span><br>
+                <span>afara plua si ninge</span>
+                <span class="text-warning">cind vre.</span>
+            </p>
+        </div>
+        <div class="row">
+            <div class="col-6 foto1">
+            </div>
+            <div class="col-6">
+                <p>Madonna and Child with Angels is the central panel of the large multi-paneled
+                    altarpiece produced by Masaccio for the chapel of Saint Julian in the church
+                    of Santa Maria del Carmine in Pisa, Italy. The panel, which is badly damaged
+                    and smaller than its original size, was produced in collaboration with Masaccio's
+                    <br><br>
+                    Madonna and Child with Angels is the central panel of the large multi-paneled
+                    altarpiece produced by Masaccio for the chapel of Saint Julian in the church
+                    of Santa Maria del Carmine in Pisa, Italy. The panel, which is badly damaged
 
+                    <br><br>
+                    Madonna and Child with Angels is the central panel of the large multi-paneled
+
+                    <br>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <p>Madonna and Child with Angels is the central panel of the large multi-paneled
+                    altarpiece produced by Masaccio for the chapel of Saint Julian in the church
+                    of Santa Maria del Carmine in Pisa, Italy. The panel, which is badly damaged
+                    and smaller than its original size, was produced in collaboration with Masaccio's
+                    <br><br>
+                    Madonna and Child with Angels is the central panel of the large multi-paneled
+                    altarpiece produced by Masaccio for the chapel of Saint Julian in the church
+                    of Santa Maria del Carmine in Pisa, Italy. The panel, which is badly damaged
+
+                    <br><br>
+                    Madonna and Child with Angels is the central panel of the large multi-paneled
+
+                    <br>
+            </div>
+            <div class="col-6 foto2">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6 foto1">
+            </div>
+            <div class="col-6">
+                <p>Madonna and Child with Angels is the central panel of the large multi-paneled
+                    altarpiece produced by Masaccio for the chapel of Saint Julian in the church
+                    of Santa Maria del Carmine in Pisa, Italy. The panel, which is badly damaged
+                    and smaller than its original size, was produced in collaboration with Masaccio's
+                    <br><br>
+                    Madonna and Child with Angels is the central panel of the large multi-paneled
+                    altarpiece produced by Masaccio for the chapel of Saint Julian in the church
+                    of Santa Maria del Carmine in Pisa, Italy. The panel, which is badly damaged
+
+                    <br><br>
+                    Madonna and Child with Angels is the central panel of the large multi-paneled
+
+                    <br>
+            </div>
         </div>
     </div>
+    <figure>
+        <div class="fixed-wrap">
+            <div id="fixed">
 
-    <div class="text-center">
-        <button type="button" id="gifsBtn" class="btn btn-succes text-center" data-toggle="collapse"
-            data-target="#gifs">Open block</button>
+            </div>
+        </div>
+    </figure>
+    <div class="container-fluid">
+        <div class="col-12">
+            <h4>Something</h4>
+            <hr>
+            <p>Madonna and Child with Angels is the central panel of the large multi-paneled
+                altarpiece produced by Masaccio for the chapel of Saint Julian in the church
+                of Santa Maria del Carmine in Pisa, Italy. The panel, which is badly damaged
+                and smaller than its original size, was produced in collaboration with Masaccio's
+                <br><br>
+                Madonna and Child with Angels is the central panel of the large multi-paneled
+                altarpiece produced by Masaccio for the chapel of Saint Julian in the church
+                of Santa Maria del Carmine in Pisa, Italy. The panel, which is badly damaged
+
+                <br><br>
+                Madonna and Child with Angels is the central panel of the large multi-paneled
+
+        </div>
     </div>
 
     <footer class="container-fluid" id="footer">
