--- a/3. Web/MyApp/ProfileSettings.html
+++ b/3. Web/MyApp/ProfileSettings.html
@@ -37,8 +37,8 @@
                         </a>
                     </li>
                 </ul>
-                <span class="text-muted"><a href="">Profile</a></span><br>
-                <span class="text-muted"><a href="ProfileSettings.html">Settings</a></span><br>
+                <span class="text-muted"><a href="UserPage.html">Profile</a></span><br>
+                <span class="text-muted"><a href="">Settings</a></span><br>
                 <span class="text-muted"><a href="Home.html">Exit</a></span><br>
             </div>
         </div>
@@ -51,81 +51,57 @@
         </nav>
     </div>
 
-    <div class="container-fluid text-center">
-        <div class="row bg-first">
-            <p>
-                My problem is that after translating up the image, the div that contains it remains
-                unchanged, and has lots of white space in the place where the image used to be.
-            </p>
-        </div>
+    <div class="container-fluid">
         <div class="row">
-            <table class="table">
-                <tr>
-                    <th>Id</th>
-                    <th>Name Intern</th>
-                    <th>Name Menthor</th>
-                    <th>Average Mark</th>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>Ion Vrisa</td>
-                    <td>Johny Ciril</td>
-                    <td>7.8</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Alexandru Vascor</td>
-                    <td>Mihai Brinza</td>
-                    <td>6.4</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Evghenii Durin</td>
-                    <td>Alexei Jorev</td>
-                    <td>8.9</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>Dumitru Diaconu</td>
-                    <td>Gosa Dudari</td>
-                    <td>7.75</td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td>Gherghe Chiet</td>
-                    <td>Mincev Mihai</td>
-                    <td>8.4</td>
-                </tr>
-                <tr>
-                    <td>6</td>
-                    <td>Nicolae Holvan</td>
-                    <td>Nicolaev Nicole</td>
-                    <td>6.7</td>
-                </tr>
-            </table>
-        </div>
-    </div>
-
-    <div class="container-fluid text-center">
-        <div class="row">
-            <div class="col-md-4 col-xs-12">
-                <canvas id="mychart"></canvas>
+            <div class="col-12" style="padding:20px">
+                <img src="https://w2w.fund/Content/img/default.png" class="rounded-circle mx-auto d-block">
+                <br>
+                <button class="btn btn-outline-primary mx-auto d-block">Change Profile Photo</button>
             </div>
-            <div class="col-md-6 col-xs-12">
-                <canvas id="mychart2"></canvas>
+            <div class="row col-12 d-flex justify-content-center">
+                <div class="col-sm-8 text-center">
+                    <table class="table">
+                        <tr>
+                            <th>Personal Data</th>
+                            <th><button class="btn btn-outline-primary btn-sm">Change Data</button></th>
+                        </tr>
+                        <tr>
+                            <td>First Name</td>
+                            <td>Test FName</td>
+                        </tr>
+                        <tr>
+                            <td>Last Name</td>
+                            <td>Test LName</td>
+                        </tr>
+                        <tr>
+                            <td>Number Phone</td>
+                            <td>+373795473385</td>
+                        </tr>
+                        <tr>
+                            <td>EMail</td>
+                            <td>test@mail.ru</td>
+                        </tr>
+                        <tr>
+                            <th>Account Data</th>
+                            <th><button class="btn btn-outline-primary btn-sm">Change Data</button></th>
+                        </tr>
+                        <tr>
+                            <td>Login</td>
+                            <td>testLogin</td>
+                        </tr>
+                        <tr>
+                            <td>Password</td>
+                            <td>********</td>
+                        </tr>
+                        <tr>
+                            <td><button class="btn btn-primary">
+                                <a href="UserPage.html" style="color: white">Back</a></button> </td>
+                            <td><button class="btn btn-danger">Delete Account</button>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <p class="text-center text-muted">
-                Coding Just Got Easy!
-
-                Free Plugin for IntelliJ,
-                Android Studio, and Eclipse: Write fast & error free code with AI code completions.
-            </p>
-        </div>
-        <div class="row">
-            <canvas id="mychart3"></canvas>
-            <script src="js_charts/javsc.js"></script>
         </div>
     </div>
 
