--- a/3. Web/MyApp/Home.html
+++ b/3. Web/MyApp/Home.html
@@ -36,6 +36,9 @@
                         <a href="Home.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a href="IQpp.html" class="nav-link">IQ++</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="About.html" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
